--- a/frontend/src/Components/UI/Card/Card.module.css
+++ b/frontend/src/Components/UI/Card/Card.module.css
@@ -1,66 +1,39 @@
 .card-game {
-  width: 300px;
-  height: 200px;
+  aspect-ratio: 4/3;
+  width: 100%;
+  height: 100%;
   position: relative;
   overflow: hidden;
-  border: 1px solid cyan;
+  /* border: 1px solid var(--main-color); */
+  cursor: pointer;
+  transition: 0.3s;
 }
 
-.card-game > img {
+.card-game > a{
+  text-decoration: none !important;
+}
+
+.card-game > a img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  filter: blur(0px) brightness(50%);
+  filter: brightness(70%);
+  transition: .3s;
 }
 
-.card-game > p {
+@media screen and (min-width: 768px) {
+  .card-game:hover{
+    transform: scale(1.05);
+  }
+}
+.card-game:hover > a img {
+  filter: brightness(90%);
+}
+
+.card-game > a p {
   position: absolute;
   bottom: 10px;
   margin-bottom: 0px;
-  padding: 0px 0px 10px 10px;
-}
-
-.card-game > a {
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  top: 80px;
-  left: 130px;
-  background-color: #222;
-  border: 1px solid cyan;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  opacity: 0;
-  transition: 1s;
-  transition-delay: 1s;
-}
-
-.card-game:hover > a {
-  opacity: 1;
-}
-
-.card-game:hover > img {
-  filter: blur(8px) brightness(50%);
-}
-
-.card-game > div {
-  position: absolute;
-  height: 10px;
-  width: 100%;
-  background: repeating-linear-gradient(
-    -45deg,
-    transparent 0 10px,
-    rgba(0, 255, 255, 0.4) 10px 20px
-  );
-}
-
-.card-game > div:first-of-type {
-  top: 0px;
-}
-
-.card-game > div:last-of-type {
-  bottom: 0px;
+  padding: 0 10px;
+  color: var(--white);
 }
