--- a/frontend/src/Components/UI/Header/Header.module.css
+++ b/frontend/src/Components/UI/Header/Header.module.css
@@ -33,6 +33,6 @@ header .overlay {
   left: 0;
   height: 100%;
   width: 100%;
-  background: linear-gradient(transparent, rgba(0, 255, 255, 0.2), #222);
+  /* background: linear-gradient(transparent, rgba(0, 255, 255, 0.2), #222); */
   z-index: 1;
 }
