--- a/frontend/src/Components/UI/Info/Info.module.css
+++ b/frontend/src/Components/UI/Info/Info.module.css
@@ -8,12 +8,12 @@
   left: 10px;
   width: 2px;
   height: 100%;
-  background-color: cyan;
+  background-color: var(--main-color);
 }
 
 .bg-info {
-  background: linear-gradient(#222 5%, rgba(33, 37, 41, 0.6), #222),
-    url("./../../../Assets/grid.png"), url("./../../../Assets/sky.jpg");
+  /* background: linear-gradient(#222 5%, rgba(33, 37, 41, 0.6), #222),
+    url("./../../../Assets/grid.png"), url("./../../../Assets/sky.jpg"); */
   background-size: cover, 120px, cover;
   background-position: center, center, center;
 }
@@ -26,12 +26,13 @@
   position: absolute;
   content: "";
   top: 8px;
-  left: -25px;
+  left: -28px;
   width: 15px;
   height: 15px;
-  background-color: cyan;
+  background-color: var(--main-color);
   border: 1px solid black;
   transform: rotate(45deg);
+  border-radius: 50%;
 }
 
 @media screen and (min-width: 992px) {
@@ -40,7 +41,7 @@
   }
 
   .info-title {
-    border-bottom: 2px solid cyan;
+    border-bottom: 2px solid var(--main-color);
     padding-left: 10px;
   }
 
