--- a/frontend/src/Components/UI/Modal/Modal.module.css
+++ b/frontend/src/Components/UI/Modal/Modal.module.css
@@ -15,7 +15,7 @@
   width: 80%;
   z-index: 1000;
   overflow: hidden;
-  border: 1px solid cyan;
+  border: 1px solid var(--main-color);
   padding: 40px;
   backdrop-filter: blur(8px);
 }
