--- a/frontend/src/Components/UI/Navbar/Navbar.module.css
+++ b/frontend/src/Components/UI/Navbar/Navbar.module.css
@@ -1,33 +1,31 @@
 .navbar {
-  background: linear-gradient(
-    to right,
-    rgba(18, 55, 55, 1),
-    rgba(18, 55, 55, 0.8)
-  );
+  background: var(--black);
+  color: var(--white);
+  border-bottom: 1px solid var(--main-color);
 }
 
-.navbar::after {
+/* .navbar::after {
   position: absolute;
   content: "";
   bottom: -1px;
   left: 0px;
   height: 1px;
   width: 100%;
-  background: linear-gradient(90deg, transparent 77px, cyan 77px);
-}
+  background: linear-gradient(90deg, transparent 77px, var(--main-color) 77px);
+} */
 
-.navLogo {
+/* .navLogo {
   position: fixed;
   top: 35px;
   left: 0px;
   width: 60px;
   height: 36px;
   background-color: rgba(18, 55, 55, 1);
-  border-bottom: 2px solid cyan;
+  border-bottom: 2px solid var(--main-color);
   z-index: -1;
-}
+} */
 
-.navLogo::after {
+/* .navLogo::after {
   position: absolute;
   content: "";
   bottom: -2px;
@@ -39,9 +37,9 @@
   box-shadow: 0 0 2px 0 rgb(255 255 255 / 100%),
     0px 0px 5px 1px rgb(12 145 255 / 100%);
   z-index: 9;
-}
+} */
 
-.navLogo::before {
+/* .navLogo::before {
   position: absolute;
   content: "";
   bottom: 2px;
@@ -51,4 +49,4 @@
   height: 18px;
   background-color: rgba(18, 55, 55, 1);
   transform: skew(-50deg);
-}
+} */
