--- a/frontend/src/Components/Views/Join/Join.module.css
+++ b/frontend/src/Components/Views/Join/Join.module.css
@@ -9,7 +9,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  border: 1px solid cyan;
+  border: 1px solid var(--main-color);
 }
 
 .streamerBlock {
@@ -21,7 +21,7 @@
 }
 
 .viewer > video {
-  border: 2px solid cyan;
+  border: 2px solid var(--main-color);
   width: 140px;
   height: 140px;
   border-radius: 50%;
