--- a/frontend/src/Components/Views/Sign/Sign.module.css
+++ b/frontend/src/Components/Views/Sign/Sign.module.css
@@ -1,8 +1,8 @@
 .bg {
-  background: linear-gradient(
+  /* background: linear-gradient(
       rgba(0, 0, 0, 1),
       rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 1)
     ),
-    url("./../../../Assets/earth.jpg");
+    url("./../../../Assets/earth.jpg"); */
 }
