--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,6 +14,16 @@ body {
     color: var(--white);
 }
 
+::-webkit-scrollbar {
+    width: 4px;
+}
+::-webkit-scrollbar-thumb {
+    background: var(--bg-header-footer);
+}
+::-webkit-scrollbar-track {
+    background: var(--white);
+}
+
 .text-main {
     color: var(--main-color);
 }
